# basic-etl-iris

./: README.md  pyproject.toml
data/: iris_transformed.csv
src/: extract.py  load.py  main.py  transform.py
